--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     ports:
       - "${HTTP_SERVER_PORT}:${HTTP_SERVER_PORT}"
     restart: always
-    command: python -m http.server -b 0.0.0.0 ${HTTP_SERVER_PORT}
+    command: uvicorn manager.main:app --host 0.0.0.0 --port ${HTTP_SERVER_PORT} --reload
     depends_on:
       rabbitmq:
         condition: service_healthy
